# hitloop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
example_output/emails/: email_f1148bf3.json  email_fd5c469f.json
examples/: basic_workflow.py  interrupt_example.py  langgraph_agent.py  run_experiment.py  webhook_server.py
experiment_results/: experiment.db  results.csv  summary.json
experiment_results/emails/: email_13298572.json  email_22c73218.json  email_3f368c22.json  email_3fd05c3f.json  email_4c74acd5.json  email_4f3ae9a7.json  email_5b291be4.json  email_9e9a0e19.json  email_b61a0191.json  email_bea0123f.json  email_ca2e52aa.json  email_dd69a440.json  email_e48787a1.json  email_e4c02a9b.json  email_e66004b3.json  email_f7039199.json  email_f7d8004b.json  email_f9c6552a.json  email_fdcc6167.json
sample_results/: results.csv  summary.json
scripts/: generate_sample_results.py
src/hitl_lab/: __init__.py
src/hitl_lab/backends/: __init__.py  cli_backend.py
src/hitl_lab/core/: __init__.py  interfaces.py  logger.py
src/hitl_lab/eval/: __init__.py  injectors.py  metrics.py  runner.py
src/hitl_lab/langgraph/: __init__.py  nodes.py
src/hitl_lab/policies/: __init__.py  always_approve.py  audit_plus_escalate.py  risk_based.py
src/hitl_lab/scenarios/: __init__.py  base.py  email_draft.py  record_update.py
src/hitloop/: __init__.py
src/hitloop/backends/: __init__.py  cli_backend.py  persistent_webhook.py  webhook_backend.py
src/hitloop/core/: __init__.py  interfaces.py  logger.py  models.py
src/hitloop/eval/: __init__.py  injectors.py  metrics.py  runner.py
src/hitloop/langgraph/: __init__.py  interrupt_nodes.py  nodes.py
src/hitloop/persistence/: __init__.py  base.py  memory.py  postgres.py  redis.py
src/hitloop/policies/: __init__.py  always_approve.py  audit_plus_escalate.py  risk_based.py
src/hitloop/scenarios/: __init__.py  base.py  email_draft.py  record_update.py
tests/: __init__.py  test_backends.py  test_injectors.py  test_integration.py  test_logger.py  test_models.py  test_policies.py  test_scenarios.py
